initial cybersecurity content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ nav:
     - Overview: overview.md
     - About us: about.md
     - Intro to ITS: intro.md
+    - Cybersecurity: cybersecurity/index.md
     - TC 204 planning: planning.md
     - Contact us: contact.md
     - Resources: resources.md
