--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,10 +8,10 @@ nav:
     - About us: about.md
     - Intro to ITS: intro.md
     - Cybersecurity: 
-      - Overview: cybersecurity/index.md
-      - Introduction: cybersecurity/beginners-guide.md
-      - Security architectures: cybersecurity/its-security-architectures.md
-      - Security standards: cybersecurity/security-standards.md
+    - Introduction: cybersecurity/beginners-guide.md      
+    - Overview: cybersecurity/index.md
+      - Security Architectures: cybersecurity/its-security-architectures.md
+      - Security Standards: cybersecurity/security-standards.md
       - ITS Threat analysis: cybersecurity/ITS-Threat-Analysis.md
       - Interoperability strategies: cybersecurity/interoperability-strategies.md
       - Cybersecurity controls: cybersecurity/its-cybersecurity-controls.md
@@ -21,6 +21,8 @@ nav:
         - Decision makers: cybersecurity/policy-makers.md
         - Implementers: cybersecurity/implementers.md
       - Cybersecurity policies: cybersecurity/security-policies.md
+        - CCMS Policies: cybersecurity/CCMS-Security-Policies.md
+        - SCMS Policies: cybersecurity/SCMS-Manager-Policies.md
       - Specialized use cases: cybersecurity/specialized-use-cases.md
       - Glossary: cybersecurity/Glossary.md
     - TC 204 planning: planning.md
