Corrected Errors and Warnings
- US to British spellings
- Linting (e.g., removing/adding lines, spaces and adjusting heading levels to be sequential to conform to markdown rules and minimize rendering issues)
- Refining references to figures to prevent lost linkages
- Correcting yml layout (e.g., the heading of a new menu section cannot directly link to a file; I added “overview” subsections instead)
- Correcting links and file names in a way that is Git compatible (i.e., on GitHub, changing a filename to use a lowercase character rather than an uppercase does not actually update the git directory - so I had to change the filenames to make all of the conventions work)
- Revised the glossary to use the Material for MkDocs term list format
- etc.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,26 +2,37 @@
     "cSpell.language": "en-GB",
     "cSpell.dictionaries": ["en-GB"],
     "cSpell.words": [
+        "appsandroles",
+        "auditd",
         "automakers",
         "backhaul",
+        "Brainpool",
         "CCMS",
         "CENELEC",
         "CISA",
         "CPOC",
+        "CSIRTs",
+        "CSMS",
         "DENM",
         "deployers",
         "DSRC",
         "DTLS",
         "ECTL",
         "ETSI",
+        "FHWA",
         "FIPS",
         "ICIP",
         "lifecycles",
         "METR",
+        "MISRA",
         "multifactor",
         "multijurisdictional",
+        "NETCONF",
+        "OMNIAIR",
         "Overcollection",
+        "playbooks",
         "PSID",
+        "RESTCONF",
         "ridesourced",
         "RITSI",
         "RSZW",
@@ -29,8 +40,10 @@
         "sidelink",
         "SIST",
         "SPDU",
+        "SSDF",
         "TISAX",
         "TVRA",
+        "unlinkability",
         "unlinkable",
         "unvetted"
     ]
