--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -99,6 +99,7 @@ markdown_extensions:
   - def_list
   - md_in_html
   - footnotes
+  - pymdownx.blocks.caption
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:material.extensions.emoji.twemoji
