Updates documentation and adds WG pages
Updates documentation to include working group pages and other minor improvements.

Specifically:
- Updates the AG4 index page title
- Adds new working group documentation pages for WG3, WG7, WG8, WG9, WG10, WG14, WG16, WG17, WG18, WG19 and WG20
- Adds a METR concept image
- Adds words to the `.vscode/settings.json` file

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "appsandroles",
         "auditd",
         "automakers",
+        "automobiles",
         "backhaul",
         "Brainpool",
         "CCMS",
@@ -43,10 +44,12 @@
         "RSZW",
         "SCMS",
         "sidelink",
+        "sidewalks",
         "SIST",
         "SPDU",
         "SSDF",
         "superfences",
+        "TISA",
         "TISAX",
         "TVRA",
         "twemoji",
