--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,12 +8,17 @@
         "automakers",
         "automobiles",
         "backhaul",
+        "Bikesharing",
         "Brainpool",
+        "BSMD",
+        "BSME",
         "CCMS",
         "CENELEC",
         "certmgmt",
+        "CIDCR",
         "CISA",
         "CPOC",
+        "crosswalks",
         "CSIRTs",
         "CSMS",
         "DENM",
@@ -26,6 +31,8 @@
         "FIPS",
         "Geolexica",
         "ICIP",
+        "ITIS",
+        "JSAE",
         "lifecycles",
         "METR",
         "mgmt",
@@ -33,7 +40,10 @@
         "multifactor",
         "multijurisdictional",
         "NETCONF",
+        "NFPA",
+        "offs",
         "OMNIAIR",
+        "OPTICITIES",
         "Overcollection",
         "playbooks",
         "PSID",
@@ -41,21 +51,30 @@
         "RESTCONF",
         "ridesourced",
         "RITSI",
+        "RITSO",
         "RSZW",
         "SCMS",
         "sidelink",
         "sidewalks",
         "SIST",
+        "SNMP",
         "SPDU",
         "SSDF",
         "superfences",
         "TISA",
         "TISAX",
+        "TPEG",
+        "Transmodel",
         "TVRA",
         "twemoji",
+        "UBCR",
         "unlinkability",
         "unlinkable",
         "unvetted",
+        "UXCR",
+        "VACM",
+        "VDMS",
+        "VDMSs",
         "vocab"
     ]
 }
