Correct formatting; Update WG 5 Presentation
Updates documentation across several working groups to clarify standard statuses and relationships.

Adds new words to the cSpell dictionary for improved spell checking.

Adds a new PDF document related to CO2-based tolling.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": "en-GB",
     "cSpell.dictionaries": ["en-GB"],
     "cSpell.words": [
+        "ANPR",
         "appdev",
         "appsandroles",
         "auditd",
@@ -27,10 +28,12 @@
         "DTLS",
         "ECTL",
         "ETSI",
+        "Eurovignette",
         "FHWA",
         "FIPS",
         "Geolexica",
         "ICIP",
+        "incl",
         "ITIS",
         "JSAE",
         "lifecycles",
@@ -52,6 +55,7 @@
         "ridesourced",
         "RITSI",
         "RITSO",
+        "RLAN",
         "RSZW",
         "SCMS",
         "sidelink",
