--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": "en-GB",
     "cSpell.dictionaries": ["en-GB"],
     "cSpell.words": [
+        "ALPR",
         "ANPR",
         "appdev",
         "appsandroles",
