Adds documentation about ISO documents
Creates a new document detailing ISO/TC 204 document types and naming conventions.
Moves the naming convention information from the general "About" page to the new dedicated document.
Updates the navigation to include this new document.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,7 +4,8 @@ repo_url: https://github.com/ISO-TC204/ISO-TC204.github.io
 nav:
   - Home: index.md
   - About:
-    - About us: about.md
+    - About TC 204: about.md
+    - About ITS: about-its.md
     - Intro to ITS: intro.md
     - Business Plan: assets/pdf/business-plan-2008-04-06.pdf
     - Contact us: contact.md
