Updates WG14 title for clarity
Updates the title of WG14 to "Driving automation and active safety systems" in both the index page and the navigation menu for improved clarity and accuracy.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,7 @@ nav:
     - Cooperative systems (WG 18): wg18/index.md
     - Coordination (AG 4): ag4/index.md
     - Cybersecurity (AHG 2): ahg2/index.md
-    - Driving automation and safety (WG 14): wg14/index.md
+    - Driving automation and active safety systems (WG 14): wg14/index.md
     - Fee and toll collection (WG 5): wg5/index.md
     - Fleet management (WG 7): wg7/index.md
     - Geographic data (WG 3): wg3/index.md
