--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,8 +38,21 @@ nav:
     - Traveller information (WG 10): wg10/index.md
   - Registries: 
     - Overview: registries.md
-    - Registry for ITS Identifiers (RITSI): https://iso-tc204.github.io/iso5345/
-    - Registry for ITS Ontologies (RITSO): https://k-vaughn.github.io/ontologies/latest/
+    - RITSI: '!import https://github.com/iso-tc204/iso5345?branch=main'
+    - RITSO: 
+      - Home: ritso/index.md
+      - Ontology formats: ritso/ontology_formats.md
+      - Concept Registry: ritso/python/concept_registry.md
+      - City Data Model:
+        - Part 1: 
+          - v1.0.1: '!import https://github.com/k-vaughn/ontology-cdm-p1?branch=main'
+        - Part 2: 
+          - v1.0.1: '!import https://github.com/k-vaughn/ontology-cdm-p2?branch=main'
+        - Part 3: 
+          - v1.0.0: '!import https://github.com/k-vaughn/ontology-cdm-p3?branch=main'
+      - ITS:
+        - Traffic Regulations: 
+          - v0.0.1: '!import https://github.com/k-vaughn/ontology-its-regulation?branch=main'
   - Standards: 
     - Overview: standards.md
     - METR: https://iso-tc204.github.io/iso24315/
@@ -94,6 +107,9 @@ plugins:
   - git-revision-date-localized:
       type: date
   - include-markdown
+  - multirepo:
+      cleanup: true  # Optional: Clean up temp dirs after build
+      keep_docs_dir: false
 markdown_extensions:
   - abbr
   - admonition
