--- a/.github/workflows/update_release.yml
+++ b/.github/workflows/update_release.yml
@@ -30,6 +30,7 @@ jobs:
           pip install mkdocs-material
           pip install mkdocs-git-revision-date-localized-plugin
           pip install mkdocs-include-markdown-plugin
+          pip install mkdocs-multirepo-plugin
 
       # Step 4: Build the MkDocs site
       - name: Build the site
