--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "deployers",
         "DSRC",
         "DTLS",
+        "ECDH",
         "ECTL",
         "ETSI",
         "Eurovignette",
